6/1/2016........22:8:5 Compare Text
6/1/2016........22:8:13 Compare Text
6/1/2016........22:8:23 Compare Text
6/1/2016........22:8:26 Compare Text
6/1/2016........22:8:30 Compare Text
6/1/2016........22:9:41 Compare Text
6/1/2016........22:9:47 Compare Text
6/1/2016........22:12:4 Compare Text
6/1/2016........22:12:42 Compare Text
6/1/2016........22:13:14 Compare Text
6/1/2016........22:13:19 Compare Text
6/1/2016........22:13:42 Compare Text
6/1/2016........22:13:48 Compare Text
6/1/2016........22:14:17 Compare Text
6/1/2016........22:22:7 Compare Text
6/1/2016........22:22:12 Compare Text
6/1/2016........22:22:17 Compare Text
6/1/2016........22:30:32 Compare Text
6/1/2016........22:30:56 Compare Text
6/1/2016........22:37:8 Compare Text
6/1/2016........22:37:11 Compare Text
6/1/2016........22:37:27 Compare Text
6/1/2016........22:38:19 Compare Text
6/1/2016........22:38:22 Compare Text
6/1/2016........22:38:32 Compare Text
6/1/2016........22:38:37 Compare Text
6/1/2016........22:39:12 Compare Text
6/1/2016........9:38:11 Compare Folder
6/1/2016........9:40:32 Compare Folder
6/1/2016........9:55:13 Compare Folder
6/1/2016........9:57:6 Compare Folder
6/1/2016........9:59:35 Compare Folder
6/1/2016........10:1:10 Compare Folder
6/1/2016........10:6:5 Compare Folder
6/1/2016........10:9:43 Compare Folder
6/1/2016........10:10:38 Compare Folder
6/1/2016........10:10:46 Compare Folder
6/1/2016........10:10:49 Compare Folder
6/1/2016........10:12:14 Compare Folder
6/1/2016........10:15:31 Compare Folder
6/1/2016........14:51:14 Compare Folder
6/1/2016........14:53:41 Compare Folder
6/1/2016........14:57:16 Compare Folder
6/1/2016........14:59:29 Compare Folder
6/1/2016........15:2:24 Compare Folder
6/1/2016........15:6:57 Compare Folder
6/1/2016........15:7:59 Compare Folder
6/1/2016........15:8:27 Compare Folder
6/1/2016........15:9:30 Compare Folder
6/1/2016........15:11:21 Compare Folder
6/1/2016........15:22:10 Compare Folder
6/1/2016........15:23:22 Compare Folder